Fixed Funnels Advanced elements Fixed overflow scrolling of insights container

--- a/frontend/src/scenes/insights/EditorFilters/EditorFilterGroup.scss
+++ b/frontend/src/scenes/insights/EditorFilters/EditorFilterGroup.scss
@@ -21,4 +21,18 @@
             margin-top: $default-spacing;
         }
     }
+
+    .insights-filter-group-count {
+        display: inline-block;
+        color: var(--white);
+        background: var(--primary);
+        border: 2px solid var(--bg-light);
+        width: 20px;
+        height: 20px;
+        font-size: 10px;
+        border-radius: 100%;
+        box-sizing: content-box;
+        margin-left: $default-spacing / 2;
+        text-align: center;
+    }
 }
